[package]
name = "civo-rs"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/civo-rs"
readme = "README.md"
repository = "https://github.com/s1ntaxe770r/civo-rs"
description = "a superior port of the civo go client"
license = "MIT"
metadata = ["civo","client"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features=["json"] }
url = "2.3.1"
tokio = { version = "1", features = ["full"] }  # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  
chrono = "0.4.23"   
rand = "0.7"